--- a/app/views/daily_report/show.html.erb
+++ b/app/views/daily_report/show.html.erb
@@ -6,6 +6,7 @@
     <p>
       <%= link_to issue.url, issue.url %>
       <%= issue.component %>
+      <%= issue.details %>
     </p>
   <% end %>
 <% end %>
