--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,4 +4,5 @@
   <li><%= link_to 'Daily Report', daily_report_path %></li>
   <li><%= link_to 'Timeline', timeline_path %></li>
   <li><%= link_to 'Backlog', backlog_path %></li>
+  <li><%= link_to 'Timeslips', working_days_path %></li>
 </ul>
